Fix spacing for btn-container and font size responsive for h2

--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ h6 {
 .caption,
 .signup,
 .btn-container {
-  padding: 0 2rem;
+  padding: 2rem;
 }
 
 .caption {
@@ -142,7 +142,7 @@ h6 {
 }
 
 h2 {
-  font-size: clamp(1.3rem, 1.5vw, 2rem);
+  font-size: clamp(1.2rem, 1.5vw, 1.5rem);
 }
 
 .signup {
@@ -182,6 +182,7 @@ input {
 input:focus {
   outline: none;
   border: 1px solid blue;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.3);
 }
 
 input:user-invalid {
@@ -208,8 +209,9 @@ span[aria-label="required"] {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  gap: 2rem;
   justify-content: flex-start;
-  margin-top: 4rem;
+  border-top: 1px solid silver;
 }
 
 .btn {
